--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,18 +1,49 @@
-.container {
-    width: 100vw;
-    height: 100vh;
-    background: #005719;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-image: linear-gradient(45deg, rgb(113, 3, 197), rgb(222, 55, 0));
     }
-    .box {
-    width: 600px;
-    height: 500px;
-    background: #fff;
-    border-radius: 5%;
+    div{
+        background-color: rgba(0, 0, 0, 0.9);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        padding: 80px;
+        border-radius: 15px;
+        color: #fff;
     }
-    body {
-    margin: 0px;
+    input{
+        padding: 15px;
+        border: none;
+        outline: none;
+        border-radius: 20px;
+        font-size: 15px;
+        text-align: center;
+    }
+    #execCopy{
+        background-image:  linear-gradient(45deg, rgb(113, 3, 197), rgb(222, 55, 0));
+        border: none;
+        padding: 15px;
+        width: 10;
+        border-radius: 15px;
+        color: white;
+        font-size: 15px;
+    }
+    .gerar{
+        background-image:  linear-gradient(45deg, rgb(113, 3, 197), rgb(222, 55, 0));
+        border: none;
+        padding: 15px;
+        width: 100%;
+        border-radius: 10px;
+        color: white;
+        font-size: 15px;
+        
+    }
+    button:hover{
+        background-image:  linear-gradient(90deg, rgb(144, 0, 255), rgb(255, 64, 0));
+        cursor: pointer;
+    }
+    #execCopy:hover{
+        background-image:  linear-gradient(90deg, rgb(144, 0, 255), rgb(255, 64, 0));
+        cursor: pointer;
     }
