--- a/views/index.html
+++ b/views/index.html
@@ -8,9 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-        </div> 
+    <div>
+        <h1>Gerador de Senha</h1>
+        <input id="input" type="text" placeholder="Senha gerada">
+        <button  id="execCopy"> Copy </button>
+        <br><br>
+        <button class="gerar">Gerar Senha</button>
     </div>
     <script src="index.js"></script>
 </body>
