melhor funcionalidade random

--- a/views/index.html
+++ b/views/index.html
@@ -11,10 +11,10 @@
     <div>
         <h1>Gerador de Senha</h1>
         <input id="input" type="text" placeholder="Senha gerada">
-        <button  id="execCopy"> Copy </button>
+        <button id="execCopy"> Copy </button>
         <br><br>
-        <button class="gerar">Gerar Senha</button>
+        <input id="clickMe" class="gerar" type="button" value="Gerar Senha" onclick="gerador();" />
     </div>
-    <script src="index.js"></script>
+    <script src="C:/Users/jmpri/creatorpassword/index.js"></script>
 </body>
 </html>
