--- a/views/index.html
+++ b/views/index.html
@@ -10,10 +10,10 @@
 <body>
     <div>
         <h1>Gerador de Senha</h1>
-        <input id="input" type="text" placeholder="Senha gerada">
+        <input id="exibir" type="text" placeholder="Senha gerada">
         <button id="execCopy"> Copy </button>
         <br><br>
-        <input id="clickMe" class="gerar" type="button" value="Gerar Senha" onclick="gerador();" />
+        <button id="gerar" class="gerar" type="button"  onclick="gerador();" >Gerar Senha</button>
     </div>
     <script src="C:/Users/jmpri/creatorpassword/index.js"></script>
 </body>
